# hw3-solutions

./: README.md  pyproject.toml
src/: example.json  main.py  quotes.json
